# mastermind

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
mastermind/: __about__.py  __init__.py  __main__.py  app.py  board.py  peg.py  player.py
tst/: test_board.py  test_player.py
